--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -10,6 +10,7 @@
     <string name="open_with">Apri con</string>
     <string name="no_app_found">Nessun app valida trovata</string>
     <string name="set_as">Imposta come</string>
+    <string name="value_copied_to_clipboard">Value copied to clipboard</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">L\'autorizzazione Archiviazione è necessaria</string>
