--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -10,7 +10,7 @@
     <string name="open_with">Avaa</string>
     <string name="no_app_found">Sovelluksia ei löydetty</string>
     <string name="set_as">Aseta</string>
-    <string name="value_copied_to_clipboard">Value copied to clipboard</string>
+    <string name="value_copied_to_clipboard">Valeur copiée dans le presse-papier</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Storage permission is required</string>
