--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -10,7 +10,7 @@
     <string name="open_with">Abrir com</string>
     <string name="no_app_found">Nenhuma aplicação encontrada</string>
     <string name="set_as">Definir como</string>
-    <string name="value_copied_to_clipboard">Value copied to clipboard</string>
+    <string name="value_copied_to_clipboard">Valor copiado para a área de transferência</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Requer acesso ao armazenamento</string>
