--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -211,16 +211,16 @@
     <!-- Settings -->
     <string name="settings">Ajustes</string>
     <string name="customize_colors">Cambiar colores</string>
-    <string name="use_english_language">Use English language</string>
+    <string name="use_english_language">Usar el idioma Inglés</string>
     <string name="show_hidden">Mostrar ficheros y directorios ocultos</string>
     <string name="font_size">Tamaño de fuente</string>
     <string name="small">Pequeña</string>
     <string name="medium">Medium</string>
     <string name="large">Grande</string>
     <string name="extra_large">Enorme</string>
-    <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
-    <string name="password_protect_whole_app">Password protect the whole application</string>
-    <string name="keep_last_modified">Keep old last-modified value at file copy/move/rename</string>
+    <string name="password_protect_hidden_items">Contraseña para proteger los medios ocultos</string>
+    <string name="password_protect_whole_app">Contraseña para proteger toda la aplicación</string>
+    <string name="keep_last_modified">Mantener el valor de ultima modificación al copiar/mover/renombrar los archivos</string>
 
     <!-- About -->
     <string name="about">Acerca de</string>
