--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -239,7 +239,14 @@
     <string name="additional_info">Mais informações</string>
     <string name="app_version">Versão da aplicação: %1$s</string>
     <string name="device_os">SO do dispositivo: %1$s</string>
-    <string name="donate_please">Olá,\n\nespero que esteja a gostar desta aplicação. Não possui anúncios e é open source. Se quiser ajudar no desenvolvimento, pode comprar a aplicação <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> que também impedirá que este diálogo seja novamente mostrado.\n\nPode encontrar mais opções de suporte ao projeto <a href="http://simplemobiletools.com/donate">aqui</a>.\n\nObrigado!</string>
+    <string name="donate_please">
+        <![CDATA[
+            Olá,<br><br>
+            espero que esteja a gostar desta aplicação. Não possui anúncios e é open source. Se quiser ajudar no desenvolvimento, pode comprar a aplicação <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> que também impedirá que este diálogo seja novamente mostrado.<br><br>
+            Pode encontrar mais opções de suporte ao projeto <a href="http://simplemobiletools.com/donate">aqui</a>.<br><br>
+            Obrigado!
+        ]]>
+    </string>
     <string name="purchase">Purchase</string>
 
     <!-- License -->
