--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -241,7 +241,14 @@
     <string name="additional_info">Дополнительная информация</string>
     <string name="app_version">Версия приложения: %1$s</string>
     <string name="device_os">ОС устройства: %1$s</string>
-    <string name="donate_please">Привет,\n\nнадеюсь, вам нравится приложение. Оно не содержит рекламы, поэтому, пожалуйста, поддержите разработку, купив приложение <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a>. Покупка также предотвратит повторное появление данного диалогового окна.\n\nДругие способы сделать пожертвование можно найти <a href="http://simplemobiletools.com/donate">здесь</a>.\n\nСпасибо!</string>
+    <string name="donate_please">
+        <![CDATA[
+            Привет,<br><br>
+            надеюсь, вам нравится приложение. Оно не содержит рекламы, поэтому, пожалуйста, поддержите разработку, купив приложение <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a>. Покупка также предотвратит повторное появление данного диалогового окна.<br><br>
+            Другие способы сделать пожертвование можно найти <a href="http://simplemobiletools.com/donate">здесь</a>.<br><br>
+            Спасибо!
+        ]]>
+    </string>
     <string name="purchase">Купить</string>
 
     <!-- License -->
