--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -243,7 +243,14 @@
     <string name="additional_info">Dodatočné informácie</string>
     <string name="app_version">Verzia aplikácie: %1$s</string>
     <string name="device_os">Operačný systém zariadenia: %1$s</string>
-    <string name="donate_please">Zdravím,\n\ndúfam, že sa vám moja apka páči. Neobsahuje žiadne reklamy, podporte prosím jej vývoj zakúpením aplikácie <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Jednoduché ďakujem</a>. Zaručí to aj to, že tento dialóg už neuvidíte.\n\nViac možností podpory nájdete <a href="http://simplemobiletools.com/donate">tu</a>.\n\nĎakujem!</string>
+    <string name="donate_please">
+        <![CDATA[
+            Zdravím,<br><br>
+            dúfam, že sa vám moja apka páči. Neobsahuje žiadne reklamy, podporte prosím jej vývoj zakúpením aplikácie <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Jednoduché ďakujem</a>. Zaručí to aj to, že tento dialóg už neuvidíte.<br><br>
+            Viac možností podpory nájdete <a href="http://simplemobiletools.com/donate">tu</a>.<br><br>
+            Ďakujem!
+        ]]>
+    </string>
     <string name="purchase">Zakúpiť</string>
 
     <!-- License -->
